@@ -21,7 +21,6 @@
 package loon.font;
 
 import java.util.Iterator;
-import java.util.StringTokenizer;
 
 import loon.BaseIO;
 import loon.LSysException;
@@ -39,43 +38,23 @@ import loon.utils.StringKeyValue;
 import loon.utils.StringUtils;
 import loon.utils.ObjectMap.Entries;
 import loon.utils.ObjectMap.Entry;
+import loon.utils.StrBuilder;
 import loon.utils.TArray;
+import loon.utils.parse.StrTokenizer;
 
 // AngelCode图像字体专用类(因为仅处理限定范围内的字体，此类速度会比较早前版本中提供的文字渲染类更快，
 // 但缺点在于，没有提供图像的文字不能被渲染).
-public class BMFont implements IFont {
-
-	private final static String DEF_BMF_ONT = "deffont";
-
-	private static BMFont _font;
-
-	/**
-	 * 获得一个默认的BMFont.
-	 * 
-	 * 比如:
-	 * 
-	 * 游戏全局使用默认BMFont(除log字体外,log字体需要设置setSystemLogFont)
-	 *
-	 * LSystem.setSystemGameFont(BMFont.getDefaultFont());
-	 * 
-	 */
-	public static BMFont getDefaultFont() {
-		if (_font == null) {
-			try {
-				_font = new BMFont(LSystem.getSystemImagePath() + DEF_BMF_ONT + ".txt",
-						LSystem.getSystemImagePath() + DEF_BMF_ONT + ".png");
-			} catch (Throwable e) {
-				LSystem.error("BMFont error !", e);
-			}
-		}
-		return _font;
-	}
-
-	public static void setDefaultFont(BMFont font) {
-		_font = font;
-	}
+public class BMFont extends FontTrans implements IFont {
 
 	private static final int DEFAULT_MAX_CHAR = 256;
+
+	private final char newLineFlag = LSystem.LF;
+
+	private final char newSpaceFlag = LSystem.SPACE;
+
+	private final char newTabSpaceFlag = LSystem.TAB;
+
+	private final char newRFlag = LSystem.CR;
 
 	private int totalCharSet = DEFAULT_MAX_CHAR;
 
@@ -90,6 +69,8 @@ public class BMFont implements IFont {
 	private IntMap<CharDef> customChars = new IntMap<CharDef>();
 
 	private PointI _offset = new PointI();
+
+	private int advanceSpace = 8;
 
 	private int _size = -1;
 
@@ -212,17 +193,17 @@ public class BMFont implements IFont {
 		if (StringUtils.isEmpty(text)) {
 			throw new LSysException("BMFont resource is null !");
 		}
-		StringTokenizer br = new StringTokenizer(text, LSystem.NL);
+		StrTokenizer br = new StrTokenizer(text, LSystem.NL);
 		info = br.nextToken();
 		common = br.nextToken();
 		page = br.nextToken();
 
 		if (info != null && !StringUtils.isEmpty(info)) {
 			int size = info.length();
-			StringBuilder sbr = new StringBuilder();
+			StrBuilder sbr = new StrBuilder();
 			for (int i = 0; i < size; i++) {
 				char ch = info.charAt(i);
-				if (ch == ' ' && sbr.length() > 0) {
+				if (ch == newSpaceFlag && sbr.length() > 0) {
 					String result = sbr.toString().toLowerCase().trim();
 					String[] list = StringUtils.split(result, '=');
 					if (list.length == 2) {
@@ -237,7 +218,7 @@ public class BMFont implements IFont {
 							continue;
 						}
 					}
-					sbr.delete(0, sbr.length());
+					sbr.setLength(0);
 				}
 				sbr.append(ch);
 			}
@@ -263,7 +244,7 @@ public class BMFont implements IFont {
 				}
 				if (line.startsWith("kernings c")) {
 				} else if (line.startsWith("kerning")) {
-					StringTokenizer tokens = new StringTokenizer(line, " =");
+					StrTokenizer tokens = new StrTokenizer(line, " =");
 					tokens.nextToken();
 					tokens.nextToken();
 					short first = Short.parseShort(tokens.nextToken());
@@ -271,12 +252,12 @@ public class BMFont implements IFont {
 					int second = Integer.parseInt(tokens.nextToken());
 					tokens.nextToken();
 					int offset = Integer.parseInt(tokens.nextToken());
-					TArray<Short> values = kerning.get(new Short(first));
+					TArray<Short> values = kerning.get(Short.valueOf(first));
 					if (values == null) {
 						values = new TArray<Short>();
-						kerning.put(new Short(first), values);
+						kerning.put(Short.valueOf(first), values);
 					}
-					values.add(new Short((short) ((offset << 8) | second)));
+					values.add(Short.valueOf((short) ((offset << 8) | second)));
 				}
 			}
 		}
@@ -307,12 +288,14 @@ public class BMFont implements IFont {
 				customChars.get((int) first).kerning = valueArray;
 			}
 		}
+		this.advanceSpace = MathUtils.max(1,
+				(_size == -1 ? (int) (lineHeight * this.fontScaleY) - halfHeight / 4 : _size) / 2);
 		LSystem.pushFontPool(this);
 	}
 
 	private CharDef parseChar(final String line) throws LSysException {
 		CharDef def = new CharDef(this);
-		StringTokenizer tokens = new StringTokenizer(line, " =");
+		StrTokenizer tokens = new StrTokenizer(line, " =");
 		tokens.nextToken();
 		tokens.nextToken();
 
@@ -337,7 +320,7 @@ public class BMFont implements IFont {
 		tokens.nextToken();
 		def.advance = Short.parseShort(tokens.nextToken());
 
-		if (def.id != (short) ' ') {
+		if (def.id != (short) newSpaceFlag) {
 			lineHeight = MathUtils.max(def.height + def.yoffset, lineHeight);
 			halfHeight = lineHeight >> 1;
 		}
@@ -353,12 +336,16 @@ public class BMFont implements IFont {
 		drawBatchString(text, x, y, col, 0, text.length());
 	}
 
-	private void drawBatchString(String text, float tx, float ty, LColor c, int startIndex, int endIndex) {
+	private void drawBatchString(String msg, float tx, float ty, LColor c, int startIndex, int endIndex) {
 		if (_isClose) {
 			return;
 		}
-		if (StringUtils.isEmpty(text)) {
+		if (StringUtils.isEmpty(msg)) {
 			return;
+		}
+		String newMessage = toMessage(msg);
+		if (checkEndIndexUpdate(endIndex, msg, newMessage)) {
+			endIndex = newMessage.length();
 		}
 		make();
 		if (displayList == null || displayList.isClosed()) {
@@ -383,7 +370,7 @@ public class BMFont implements IFont {
 		}
 
 		int keyCode = 1;
-		keyCode = LSystem.unite(keyCode, text.hashCode());
+		keyCode = LSystem.unite(keyCode, newMessage.hashCode());
 		keyCode = LSystem.unite(keyCode, lazyHashCode);
 
 		Display display = displays.get(keyCode);
@@ -401,10 +388,21 @@ public class BMFont implements IFont {
 
 			CharDef lastCharDef = null;
 			for (int i = startIndex; i < endIndex; i++) {
-				int id = text.charAt(i);
-				if (id == '\n') {
+				char id = newMessage.charAt(i);
+				if (id == newRFlag) {
+					continue;
+				}
+				if (id == newLineFlag) {
 					x = 0;
 					y += lineHeight;
+					continue;
+				}
+				if (id == newSpaceFlag) {
+					x += advanceSpace;
+					continue;
+				}
+				if (id == newTabSpaceFlag) {
+					x += (advanceSpace * 3);
 					continue;
 				}
 				CharDef charDef = null;
@@ -434,7 +432,7 @@ public class BMFont implements IFont {
 			display = new Display();
 
 			display.cache = displayList.newBatchCache();
-			display.text = text;
+			display.text = newMessage;
 			display.width = 0;
 			display.height = 0;
 
@@ -469,12 +467,16 @@ public class BMFont implements IFont {
 		}
 	}
 
-	private void drawString(GLEx g, String text, float tx, float ty, LColor c, int startIndex, int endIndex) {
+	private void drawString(GLEx g, String msg, float tx, float ty, LColor c, int startIndex, int endIndex) {
 		if (_isClose) {
 			return;
 		}
-		if (StringUtils.isEmpty(text)) {
+		if (StringUtils.isEmpty(msg)) {
 			return;
+		}
+		String newMessage = toMessage(msg);
+		if (checkEndIndexUpdate(endIndex, msg, newMessage)) {
+			endIndex = newMessage.length();
 		}
 		make();
 		if (displayList == null || displayList.isClosed()) {
@@ -488,10 +490,21 @@ public class BMFont implements IFont {
 		int x = 0, y = 0;
 		CharDef lastCharDef = null;
 		for (int i = startIndex; i < endIndex; i++) {
-			int id = text.charAt(i);
-			if (id == '\n') {
+			char id = newMessage.charAt(i);
+			if (id == newRFlag) {
+				continue;
+			}
+			if (id == newLineFlag) {
 				x = 0;
 				y += lineHeight;
+				continue;
+			}
+			if (id == newSpaceFlag) {
+				x += advanceSpace;
+				continue;
+			}
+			if (id == newTabSpaceFlag) {
+				x += (advanceSpace * 3);
 				continue;
 			}
 			CharDef charDef = null;
@@ -536,14 +549,15 @@ public class BMFont implements IFont {
 	}
 
 	@Override
-	public void drawString(GLEx gl, String text, float x, float y, float sx, float sy, float ax, float ay,
+	public void drawString(GLEx gl, String msg, float x, float y, float sx, float sy, float ax, float ay,
 			float rotation, LColor c) {
 		if (_isClose) {
 			return;
 		}
-		if (StringUtils.isEmpty(text)) {
+		if (StringUtils.isEmpty(msg)) {
 			return;
 		}
+		String newMessage = toMessage(msg);
 		boolean anchor = ax != 0 || ay != 0;
 		boolean scale = sx != 1f || sy != 1f;
 		boolean angle = rotation != 0;
@@ -553,15 +567,15 @@ public class BMFont implements IFont {
 				gl.saveTx();
 				Affine2f xf = gl.tx();
 				if (angle) {
-					float centerX = x + this.stringWidth(text) / 2;
-					float centerY = y + this.stringHeight(text) / 2;
+					float centerX = x + this.stringWidth(newMessage) / 2;
+					float centerY = y + this.stringHeight(newMessage) / 2;
 					xf.translate(centerX, centerY);
 					xf.preRotate(rotation);
 					xf.translate(-centerX, -centerY);
 				}
 				if (scale) {
-					float centerX = x + this.stringWidth(text) / 2;
-					float centerY = y + this.stringHeight(text) / 2;
+					float centerX = x + this.stringWidth(newMessage) / 2;
+					float centerY = y + this.stringHeight(newMessage) / 2;
 					xf.translate(centerX, centerY);
 					xf.preScale(sx, sy);
 					xf.translate(-centerX, -centerY);
@@ -570,7 +584,7 @@ public class BMFont implements IFont {
 					xf.translate(ax, ay);
 				}
 			}
-			drawString(gl, text, x, y, c);
+			drawString(gl, newMessage, x, y, c);
 		} finally {
 			if (update) {
 				gl.restoreTx();
@@ -579,14 +593,15 @@ public class BMFont implements IFont {
 	}
 
 	@Override
-	public int stringHeight(String text) {
-		if (StringUtils.isEmpty(text)) {
+	public int stringHeight(String msg) {
+		if (StringUtils.isEmpty(msg)) {
 			return 0;
 		}
+		String newMessage = toMessage(msg);
 		make();
 		Display display = null;
 		for (Display d : displays.values()) {
-			if (d != null && text.equals(d.text)) {
+			if (d != null && newMessage.equals(d.text)) {
 				display = d;
 				break;
 			}
@@ -598,14 +613,14 @@ public class BMFont implements IFont {
 			display = new Display();
 		}
 		int lines = 0;
-		for (int i = 0; i < text.length(); i++) {
-			int id = text.charAt(i);
-			if (id == '\n') {
+		for (int i = 0; i < newMessage.length(); i++) {
+			int id = newMessage.charAt(i);
+			if (id == newLineFlag) {
 				lines++;
 				display.height = 0;
 				continue;
 			}
-			if (id == ' ') {
+			if (id == newSpaceFlag) {
 				continue;
 			}
 			CharDef charDef = null;
@@ -625,7 +640,7 @@ public class BMFont implements IFont {
 
 	@Override
 	public int charWidth(char c) {
-		if (c == '\n') {
+		if (c == newLineFlag) {
 			return 0;
 		}
 		make();
@@ -642,14 +657,15 @@ public class BMFont implements IFont {
 	}
 
 	@Override
-	public int stringWidth(String text) {
-		if (StringUtils.isEmpty(text)) {
+	public int stringWidth(String msg) {
+		if (StringUtils.isEmpty(msg)) {
 			return 0;
 		}
 		make();
+		String newMessage = toMessage(msg);
 		Display display = null;
 		for (Display d : displays.values()) {
-			if (d != null && text.equals(d.text)) {
+			if (d != null && newMessage.equals(d.text)) {
 				display = d;
 				break;
 			}
@@ -662,9 +678,9 @@ public class BMFont implements IFont {
 		}
 		int width = 0;
 		CharDef lastCharDef = null;
-		for (int i = 0, n = text.length(); i < n; i++) {
-			int id = text.charAt(i);
-			if (id == '\n') {
+		for (int i = 0, n = newMessage.length(); i < n; i++) {
+			int id = newMessage.charAt(i);
+			if (id == newLineFlag) {
 				width = 0;
 				continue;
 			}
@@ -748,21 +764,22 @@ public class BMFont implements IFont {
 	}
 
 	@Override
-	public String confineLength(String s, int width) {
+	public String confineLength(String msg, int width) {
+		String newMessage = toMessage(msg);
 		int length = 0;
-		for (int i = 0; i < s.length(); i++) {
-			length += stringWidth(String.valueOf(s.charAt(i)));
+		for (int i = 0; i < newMessage.length(); i++) {
+			length += stringWidth(String.valueOf(newMessage.charAt(i)));
 			if (length >= width) {
 				int pLength = stringWidth("...");
 				while (length + pLength >= width && i >= 0) {
-					length -= stringWidth(String.valueOf(s.charAt(i)));
+					length -= stringWidth(String.valueOf(newMessage.charAt(i)));
 					i--;
 				}
-				s = s.substring(0, ++i) + "...";
+				newMessage = newMessage.substring(0, ++i) + "...";
 				break;
 			}
 		}
-		return s;
+		return newMessage;
 	}
 
 	@Override
@@ -808,6 +825,17 @@ public class BMFont implements IFont {
 		return getFace();
 	}
 
+	@Override
+	public ITranslator getTranslator() {
+		return _translator;
+	}
+
+	@Override
+	public IFont setTranslator(ITranslator translator) {
+		this._translator = translator;
+		return this;
+	}
+	
 	public boolean isClosed() {
 		return _isClose;
 	}
@@ -841,5 +869,6 @@ public class BMFont implements IFont {
 		builder.kv("info", info).comma().kv("common", common).comma().kv("page", page);
 		return builder.toString();
 	}
+
 
 }
